Subida de imagen

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Estos son los cambios para enviar a push</p>
+    <img src="https://avatars.githubusercontent.com/u/108241370?v=4&size=40" alt="">
 </body>
 </html>
