Intento de comitear directo

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <img src="https://avatars.githubusercontent.com/u/108241370?v=4&size=40" alt="">
+    <p> Vamos a ver si con esto hay algun cambio en status , aun que fue curioso el error</p>
 </body>
 </html>
